--- a/templates/users.html
+++ b/templates/users.html
@@ -5,7 +5,9 @@
 <div class="container">
     <p>Home page</p>
     <ul class="pagination">
+        {% if page != 1 %}
         <li class="page-item"><a class="page-link" href="{{ url_for('users_page', page=prev) }}">Previous</a></li>
+        {% endif %}
         {% for i in range(len) %}
        
         <!-- <li class="page-item active"><a class="page-link" href="#">1</a></li>
@@ -13,7 +15,9 @@
         <li class="page-item"><a class="page-link" href="{{ url_for('users_page', page=num_pages[i]) }}">{{num_pages[i]}}</a></li>
       
         {% endfor %}
+        
         <li class="page-item"><a class="page-link" href="{{ url_for('users_page', page=next) }}">Next</a></li>
+       
       </ul>
      
         <div class="d-flex flex-wrap align-content-start mb-3">
