New structure for project

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,7 +8,7 @@
     
     <div class="d-flex justify-content-center mt-5">
         <div classe="p-2 bg-primary me-4">
-          <a href="{{ url_for('users') }}" class="btn btn-success">Go to Users</a>
+          <a href="{{ url_for('home.users') }}" class="btn btn-success">Go to Users</a>
         </div>
         <!-- <div class="p-2 bg-warning">Flex item 2</div> -->
       </div>
